[project]
name = "Qdrant_Sentinel"
version = "0.1.0"
description = "Universal multi-project codebase indexer for Qdrant"
authors = [
    { name = "Pawe Lachman", email = "neco.001[*&*]gmail.com" }
]
dependencies = [
    "watchdog>=4.0.0",
    "qdrant-client>=1.9.0",
    "openai>=1.0.0",
    "pathspec>=0.12.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["qdrant", "vector-database", "indexing", "llm", "embeddings", "codebase"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/neco001/Qdrant_Sentinel"
Repository = "https://github.com/neco001/Qdrant_Sentinel"
Issues = "https://github.com/neco001/Qdrant_Sentinel/issues"

[project.scripts]
qdrant-sentinel = "sentinel:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinel.py"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]
